--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,39 +1,21 @@
 /* Login Page */
-
-#login-page {
-    background-image: linear-gradient(#40a9ff, #096dd9);
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-  }
-  
-  #login-card {
-    position: relative;
-    top: calc(50vh - 144px);
-    left: calc(50vw - 210px);
-    padding-top: 36px;
-    padding-bottom: 66px;
-    width: 420px;
-    text-align: center;
-    background-color: white;
-    border-radius: 22px;
-  }
-  
-  .login-button {
-    cursor: pointer;
-    color: white;
-    padding: 12px;
-    border-radius: 8px;
-    display: inline-block;
-  }
-  
-  .facebook {
-    background-color: #3b5998;
-  }
-  
-  .google {
-    background-color: #4285f4;
-    color: white;
+.login-wrapper {
+    height: 100vh;
+} 
+    .login-card {
+        display: inline-block;
+        width: 300px;
+        height: 300px;
+        padding: 50px;
+        text-align: center;
+        color: #ffffff;
+    }
+        .login-card h1 {
+            font-family: 'Amatic SC', cursive;
+            font-size: 64px;
+            font-weight: 700;
+            color: #444444;
+        }
+  .google .anticon {
+    vertical-align: 0;
   }
